# moc

./: Cargo.toml  README.md
.zed/: debug.json
moc-cli/: Cargo.toml
moc-cli/src/: main.rs
moc-common/: Cargo.toml
moc-common/src/: ast.rs  debug_utils.rs  decl.rs  error.rs  expr.rs  lib.rs  op.rs  stmt.rs  token.rs
moc-cranelift/: Cargo.toml
moc-cranelift/src/: lib.rs
moc-llvm/: Cargo.toml
moc-llvm/src/: hello.ll  lib.rs
moc-main/: Cargo.toml
moc-main/src/: lib.rs
moc-parser/: Cargo.toml
moc-parser/src/: lexer.rs  lib.rs  parser.rs
moc-semantic/: Cargo.toml
moc-semantic/src/: lib.rs
