[package]
name = "mo"
description = "Command Line Interface for the Mo compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
moc-main = { path = "../moc-main" }
moc-common = { path = "../moc-common" }
simple_logger = "5.1.0"
ron = "0.11.0"
serde = "1.0.228"
